# UnfoldLArPix

./: .gitignore  ANALYSIS_SUMMARY.md  CHANGELOGS.md  INSTRUCTIONS.md  README.md  pyproject.toml
docs/examinations/: 01_algorithm_overview.md  02_bug_report.md  03_efficiency_and_gpu.md  04_memory_audit.md  05_open_questions.md  README.md
examples/: ANALYSIS_HISTORY.md  POWER_SPECTRA_REPORT.md  SCRIPTS_GUIDE.md  V3_ANALYSIS_SUMMARY.md  burst_processing_example.py  dash_compare_hwf.py  dash_event_display.py  deconv_example.py  deconv_example2.py  deconv_example3.py  deconv_example4.py  deconv_example5.py  deconv_example6.py  deconv_positron_v1.py  deconv_positron_v2.py  deconv_positron_v3.py  deconv_positron_v3_burst.py  deconv_xyz.py  event_display.ipynb  fr_expand_from_average.py  organize_json_files.py  plot_proj.py  plot_proj_nbins.py  redo_analysis_tpc0.sh  report_deconv_analysis.md  run_analysis.py  run_deconv_matrix.sh  run_deconv_positron.sh  run_full_analysis.sh  run_shield.sh  run_v3_20260318_tpc0.sh  run_v3_special.sh  snr.py  snr2.py
examples/toy1d/: deconv2.ipynb  deconv2b.ipynb  deconv3b.ipynb  deconv5.ipynb  deconv5c.ipynb  deconv5e.ipynb
examples/toy2d/: README.md  deconv2d_demo.py
src/unfoldlarpix/: README_burst_processor.md  __init__.py  burst_processor.py  burst_processor_v2.py  burst_processor_v3.py  cli.py  data_containers.py  data_loader.py  deconv.py  deconv_workflow.py  field_response.py  hit_to_wf.py  smear_truth.py
tests/: test_burst_processor.py  test_burst_processor_v2.py  test_burst_processor_v3.py  test_data_loader.py  test_deconv_workflow.py  test_field_response.py  test_template_compensation_diagnostics.py
