[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "UnfoldLArPix"
version = "0.1.0"
description = "Signal processing package for LArPix data unfolding"
readme = "README.md"
requires-python = ">=3.11"
license = {text = ""}
authors = [
    {name = "Yousen Zhang", email = "yzhang11@bnl.gov"},
]
keywords = ["signal-processing", "lar-pix", "deconvolution", "unfolding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24.2",
]

[project.scripts]
unfoldlarpix = "unfoldlarpix.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
docs = [
#     "sphinx>=5.0.0",
#     "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ndlar/UnfoldLArPix"
Repository = "https://github.com/ndlar/UnfoldLArPix"
Documentation = "https://unfoldlarpix.readthedocs.io"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
force_sort_within_sections = true

[tool.ruff]
line-length = 88
target-version = "py311"

# A solid default rule set:
# E/F: pycodestyle + pyflakes
# I: import rules (can overlap with isort, but useful)
# B: bugbear (common bug patterns)
# UP: pyupgrade (modern syntax)
# SIM: simplifications
select = ["E", "F", "I", "B", "UP", "SIM"]

# Example ignores (uncomment if you need them):
# ignore = ["E203", "E266", "E501"]

# If you keep isort, you can still let Ruff check imports.
# Alternatively, you can drop isort and rely on Ruff for import sorting.

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
no_implicit_optional = true
# Start relaxed; tighten later if desired:
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
